--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
     "name": "nodemapmarkers",
     "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
+    "description": "",    
+    "main": "app.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "nodemon app.js"
+        "dev": "nodemon app.js",
+        "start": "node app.js"
     },
     "author": "",
     "license": "ISC",
