--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
     "name": "nodemapmarkers",
     "version": "1.0.0",
-    "description": "",    
+    "description": "",
     "main": "app.js",
     "scripts": {
         "start": "node app.js",
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "nodemon app.js"    
+        "dev": "nodemon app.js"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
         "bcryptjs": "^2.4.3",
-        "connect-flash": "^0.1.1",
         "cloudinary": "^1.14.0",
+        "connect-flash": "^0.1.1",
+        "cookie-parser": "^1.4.4",
         "ejs": "^2.6.2",
         "express": "^4.17.1",
         "express-ejs-layouts": "^2.5.0",
@@ -22,10 +23,11 @@
         "js-datepicker": "^4.6.6",
         "mongodb": "^3.2.7",
         "mongoose": "^5.7.4",
-        "passport": "^0.4.0",
-        "passport-local": "^1.0.0",
         "multer": "^1.4.2",
         "nodemon": "^1.19.1",
-        "objectid": "^3.2.1"
+        "objectid": "^3.2.1",
+        "passport": "^0.4.0",
+        "passport-local": "^1.0.0",
+        "req-flash": "0.0.3"
     }
 }
