--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "objectid": "^3.2.1",
         "passport": "^0.4.0",
         "passport-local": "^1.0.0",
-        "req-flash": "0.0.3"
+        "req-flash": "0.0.3",
+        "tiny-date-picker": "^3.2.8"
     }
 }
